# shader_engine

./: .clang-format  .clang-tidy  .env  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
cmake/: _compiler_warnings.cmake  _library_helpers.cmake  _standard_project_settings.cmake  _static_analysis.cmake  helpers.cmake
engine/: CMakeLists.txt
engine/include/: CMakeLists.txt
engine/include/engine/: CMakeLists.txt  engine.hpp
engine/include/engine/core/: exception_handler.hpp  settings.hpp  singleton.hpp  types.hpp  utils.hpp  win32.hpp
engine/include/engine/debug/: logger.hpp
engine/include/engine/filesystem/: file_handler.hpp  text_file_writer.hpp
engine/include/engine/thread/: block_process.hpp  block_thread.hpp
engine/src/: CMakeLists.txt  engine.cpp
engine/src/core/: exception_handler.cpp  settings.cpp  singleton.cpp  utils.cpp
engine/src/debug/: logger.cpp
engine/src/filesystem/: file_handler.cpp  text_file_writer.cpp
engine/src/thread/: block_process.cpp  block_thread.cpp
game/: CMakeLists.txt
game/include/: CMakeLists.txt
game/include/game/: game.hpp
game/include/game/core/: build_config.hpp
game/src/: CMakeLists.txt  game.cpp  main.cpp
libs/: CMakeLists.txt
scripts/: README.md  _cli.py  _globals.py  _helpers.py  _types.py  build.py  clean.py  configure.py  dev.bat  dev.sh  help.py  install.py  requirements.txt  run.py
